--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,3 +1,8 @@
 [workspace]
-members=["01/counting_calories", "02/rps"]
+members=[
+"01/counting_calories",
+"02/rps",
+"03/rucksack_prob",
+"04/camp_cleanup"
+]
 excludes=[]
