--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ members=[
 "04/camp_cleanup",
 "05/supply_stacks",
 "06/tuning_trouble",
-"07/no_space_left"
+"07/no_space_left",
+"08/treetop"
 ]
 excludes=[]
